--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,8 +10,8 @@
   </head>
   <body>
     <header id="header">
-      <img src="/React-Investment-Calculator/assets/investment-calculator-logo-fb67e9a9.png" alt="investment-calculator-logo"/>
-      <h1>Investment Calculator</h1>
+      <img src="/React-Investment-Calculator/assets/investment-calculator-logo-fb67e9a9.png" alt="investment-calculator-logo" />
+      <h1>Investment Calculator v1</h1>
     </header>
     <div id="root"></div>
     
