--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header id="header">
       <img src="/React-Investment-Calculator/assets/investment-calculator-logo-fb67e9a9.png" alt="investment-calculator-logo" />
-      <h1>Investment Calculator v1</h1>
+      <h1>Investment Calculator</h1>
     </header>
     <div id="root"></div>
     
